:sparkles: feat: implement forget password service

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 spring.application.name=mail-service-v2
 server.port=8082
 spring.config.import=classpath:.env-dev.properties
+# database
+spring.data.mongodb.uri=${MONGO_URI}
 # envs
 # email
 spring.mail.host=${EMAIL_HOST}
@@ -14,3 +16,6 @@ spring.rabbitmq.addresses=${RABBITMQ_ADDRESS}
 queue_name.confirm_email=${QUEUE_NAME_CONFIRM_EMAIL}
 routing_key.confirm_email=${ROUTING_KEY_CONFIRM_EMAIL}
 email.confirmation.url=${EMAIL_CONFIRMATION_URL}
+# forget password service
+queue_name.forget_password=${QUEUE_NAME_FORGET_PASSWORD}
+routing_key.forget_password=${ROUTING_KEY_FORGET_PASSWORD}
