--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.5.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
