:bug: fix: add optional for .env file in prod properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=mail-service-v2
 server.port=8082
-spring.config.import=classpath:.env-prod.properties
+spring.config.import=optional:classpath:.env-prod.properties
 # database
 spring.data.mongodb.uri=${ATLAS_CLUSTER}
 spring.data.mongodb.database=${CLUSTER_DATABASE}
